@@ -3,6 +3,7 @@ codebird-php - changelog
 
 2.4.0 (not yet released)
 + rfe #21 JSON return format
++ Support HTTP proxy replies
 
 2.3.7 (not yet released)
 + Add contributing guidelines
